<resources>
    <string name="app_name">Kotoba</string>

    <string name="start">Mulai</string>
    <string name="instruksi">Instruksi</string>
    <string name="close">Tutup</string>
    <string name="kategori">Kategori</string>
    <string name="gambar">gambar</string>
    <string name="keluar">Tekan sekali lagi untuk keluar</string>

    <string name="go_n5">Menghafal Kosakata N5</string>
    <string name="go_n4">Menghafal Kosakata N4</string>
    <string name="kanji_n5">Level N5 menguasai Kanji sekitar: 100</string>
    <string name="kosakata_n5">Menguasai kosakata sekitar: 800</string>
    <string name="text_n5">Dan bisa memahami kalimat standar jika ditulis dengan hiragana atau dengan kanji yang sangat sederhana. </string>
    <string name="kanji_n4">Level N4 menguasai Kanji sekitar: 300</string>
    <string name="kosakata_n4">Menguasai kosakata sekitar: 1500</string>
    <string name="text_n4">dan dapat mengerti percakapan sehari-hari, jika diucapkan dengan lambat, dan dapat membaca materi sederhana</string>

    <string name="instruksi_txt">Kotoba adalah sebuah aplikasi penghapal kosakata Bahasa Jepang berdasarkan N5 dan N4 untuk memudahkan dalam ujian JLPT (Japanese Language Proficiency Test) dan berkomunikasi secara langsung</string>
    <string name="instruksi_detail">Cara penggunaan aplikasi kotoba sebagai berikut:\n 1. Pertama-tama Silahkan tekan tombol mulai\n 2. Silahkan pilih level untuk menghafal kosakata disarankan untuk memulai dari level dasar yaitu N5\n 3. Setelah itu silahkan pilih kategori untuk mulai menghafal kosakata\n 4. Selamat menghafal</string>


    <string name="display_header">Tampilan</string>
    <string name="pref_dark_title">Mode Gelap</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Otomatis</string>
    <string name="dark_mode_on">Mode Gelap</string>
    <string name="dark_mode_off">Mode Cahaya</string>
    <string name="card_next">Selanjutnya</string>
    <string name="card_previous">Sebelumnya</string>
    <string name="editing_meaning">は</string>
    <string name="editing_word">daun</string>
    <string name="romaji">ha</string>

    <string name="pref_dark_mode_key">practice_dark_mode</string>
    <string name="pref_dark_mode_title">Dark Mode</string>
    <string name="pref_reminder_time_title">Atur Waktu</string>
    <string name="pref_reminder_time_key">reminder_time_key</string>
    <string name="pref_practice_reminder_key">practice_reminder_key</string>
    <string name="pref_practice_reminder_title">Pengingat Latihan</string>
    <string name="pengingat">Notifikasi Pengingat</string>
    <string name="notification_title">Waktu Untuk Latihan</string>
    <string name="notification_content">Kamu akan lebih baik jika latihan setiap hari, Mari latihan, Semangat</string>
</resources>