<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">
    <TextView
        android:id="@+id/tvKanjiN5"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kanji_n5" />

    <TextView
        android:id="@+id/tvKosakataN5"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kosakata_n5" />

    <TextView
        android:id="@+id/tvTextN5"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_n5" />

    <Button
        android:id="@+id/btnN5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_n5"/>

    <TextView
        android:id="@+id/tvKanjiN4"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kanji_n4" />

    <TextView
        android:id="@+id/tvKosakataN4"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kosakata_n4" />

    <TextView
        android:id="@+id/tvTextN4"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_n4" />

    <Button
        android:id="@+id/btnN4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_n4"/>

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/japan"/>
</LinearLayout>