<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.practice.n5.PracticeN5Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/counter"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="30sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_height="0dp"
        android:id="@+id/cvWord"
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:strokeColor="@color/biru_indigo"
        app:strokeWidth="2dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cvMeaning"
        app:layout_constraintTop_toBottomOf="@+id/counter">
        <TextView
            android:text="@string/editing_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/word"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="30dp"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/cvMeaning"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:strokeColor="@color/biru_indigo"
        app:strokeWidth="2dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/cvWord">

        <TextView
            android:text="@string/editing_meaning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/meaning"
            android:gravity="center"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="30dp"/>
        <TextView
            android:text="@string/romaji"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/romaji"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:scrollbars="vertical"
            app:autoSizeTextType="uniform"
            android:fadeScrollbars="true"
            app:autoSizeMaxTextSize="30dp"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:text="@string/card_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:backgroundTint="@color/biru_dark"/>

    <com.google.android.material.button.MaterialButton
        android:text="@string/card_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="8dp"
        android:onClick="previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:backgroundTint="@color/biru_dark"/>
</androidx.constraintlayout.widget.ConstraintLayout>